# analogiq-plugin

./: .clangd  .gitignore  CMakeLists.txt  COVERAGE_THRESHOLD  Doxyfile  LICENSE  README.md  VERSION  annotated.html  annotated_dup.js  build.sh  build_docs.sh  classes.html  clean_build.sh  debug_build.sh  dir_74389ed8173ad57b461b9d623a1f3867.html  dir_74389ed8173ad57b461b9d623a1f3867.js  doxygen_crawl.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_func.js  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_j.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  (+45 more)
.github/: README.md  pull_request_template.md
.github/workflows/: docs.yml  release-artifacts.yml  semver.yml  test-coverage.yml
Source/: AnalogIQEditor.cpp  AnalogIQEditor.h  AnalogIQProcessor.cpp  AnalogIQProcessor.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  DraggableListBox.h  FileSystem.cpp  FileSystem.h  GearItem.cpp  GearItem.h  GearLibrary.cpp  GearLibrary.h  IFileSystem.h  INetworkFetcher.h  NetworkFetcher.cpp  NetworkFetcher.h  NotesPanel.cpp  NotesPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  Rack.cpp  Rack.h  RackSlot.cpp  RackSlot.h  RackStateListener.h
d0/d7a/: _rack_8cpp.html  _rack_8cpp_source.html  struct_gear_control_1_1_switch_option_frame-members.html
d0/d86/: _notes_panel_8h.html  _notes_panel_8h.js  _notes_panel_8h_source.html
d0/d88/: class_notes_panel_1_1_notes_container-members.html
d0/d8e/: _plugin_editor_8h.html  _plugin_editor_8h.js  _plugin_editor_8h_source.html
d0/dbe/: class_i_network_fetcher.html  class_i_network_fetcher.js
d0/dc7/: class_rack.html  class_rack.js
d0/dcb/: class_network_fetcher.html  class_network_fetcher.js
d1/d32/: class_rack_1_1_rack_container.html  class_rack_1_1_rack_container.js
d1/d4c/: _file_system_8cpp.html  _file_system_8cpp.js  _file_system_8cpp_source.html
d1/d68/: struct_filter_option.html  struct_filter_option.js
d2/d10/: class_dummy_file_system-members.html
d2/d1e/: class_gear_list_box_model-members.html
d2/d58/: _file_system_8h.html  _file_system_8h.js  _file_system_8h_source.html
d2/d9a/: _gear_item_8h.html  _gear_item_8h.js  _gear_item_8h_source.html  class_gear_list_box_model.html  class_gear_list_box_model.js
d2/de6/: class_analog_i_q_editor-members.html
d3/d9f/: class_rack_state_listener.html  class_rack_state_listener.js
d3/dc3/: class_analog_i_q_editor_1_1_flat_menu_button_look_and_feel-members.html
d3/dd8/: _rack_state_listener_8h.html  _rack_state_listener_8h.js  _rack_state_listener_8h_source.html
d4/d4b/: _plugin_editor_8cpp.html  _plugin_editor_8cpp_source.html
d4/d91/: _network_fetcher_8cpp.html  _network_fetcher_8cpp.js  _network_fetcher_8cpp_source.html
d4/d9f/: class_cache_manager.html  class_cache_manager.js
d4/db5/: _rack_slot_8h.html  _rack_slot_8h.js  _rack_slot_8h_source.html
d4/de7/: class_file_system-members.html
d5/d0f/: class_file_system.html  class_file_system.js
d5/d18/: class_analog_i_q_processor.html  class_analog_i_q_processor.js
d5/d28/: _preset_manager_8h.html  _preset_manager_8h.js  _preset_manager_8h_source.html
d5/d8c/: class_gear_library.html  class_gear_library.js
d5/d8d/: _rack_slot_8cpp.html  _rack_slot_8cpp_source.html
d5/dfc/: class_notes_panel-members.html
d6/d20/: class_i_file_system.html  class_i_file_system.js
d6/d30/: class_draggable_list_box.html  class_draggable_list_box.js
d6/d59/: _preset_manager_8cpp.html  _preset_manager_8cpp_source.html
d6/d6a/: class_preset_manager.html  class_preset_manager.js
d6/d6b/: namespace_remote_resources.html
d6/dad/: class_dummy_network_fetcher.html  class_dummy_network_fetcher.js
d6/db4/: class_i_network_fetcher-members.html
d6/dc0/: class_gear_tree_item.html  class_gear_tree_item.js
d7/d31/: _draggable_list_box_8h.html  _draggable_list_box_8h.js  _draggable_list_box_8h_source.html
d7/d37/: class_rack-members.html
d7/d44/: _rack_8h.html  _rack_8h.js  _rack_8h_source.html
d7/d9c/: class_notes_panel_1_1_notes_container.html  class_notes_panel_1_1_notes_container.js
d7/dc5/: class_i_file_system-members.html
d8/da8/: _analog_i_q_editor_8cpp.html  _analog_i_q_editor_8cpp_source.html
d9/d64/: class_analog_i_q_editor_1_1_menu_bar_container-members.html
d9/d6c/: _analog_i_q_processor_8h.html  _analog_i_q_processor_8h.js  _analog_i_q_processor_8h_source.html
d9/d92/: _notes_panel_8cpp.html  _notes_panel_8cpp_source.html
d9/da8/: _gear_library_8cpp.html  _gear_library_8cpp.js  _gear_library_8cpp_source.html
d9/dc5/: class_notes_panel.html  class_notes_panel.js
d9/dd6/: _r_e_a_d_m_e_8md.html
d9/de3/: _gear_item_8cpp.html  _gear_item_8cpp_source.html
da/d11/: class_draggable_list_box-members.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+67 more)
tests/: CMakeLists.txt  README.md  main.cpp
tests/unit/: CacheManagerTests.cpp  DraggableListBoxTests.cpp  FileSystemTests.cpp  GearItemTests.cpp  GearLibraryTests.cpp  MOCK_ISOLATION_IMPLEMENTATION.md  MockFileSystem.h  MockNetworkFetcher.h  MockRackStateListener.h  MockStateVerifier.h  NetworkFetcherTests.cpp  NotesPanelTests.cpp  PluginEditorTests.cpp  PluginProcessorTests.cpp  PresetIntegrationTests.cpp  PresetManagerTests.cpp  RackSlotTests.cpp  RackTests.cpp  TestFixture.h  TestHelpers.h  TestImageHelper.h
(+58 files in other folders)
